# app/Http/Controllers/ProductController.php
@@ -111,51 +111,15 @@ class ProductController extends Controller
      *         name="id",
      *         in="path",
      *         description="id продукта"     
-     *     ),
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="multipart/form-data",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                      description="id категории",
-     *                      property="category_id",
-     *                      type="number",
-     *			            default=1
-     *                 ),
-     *                 @OA\Property(
-     *                      description="название продукта",
-     *                      property="name",
-     *                      type="string",
-     *			            default="Аксессуары"
-     *                 ),
-     *                 @OA\Property(
-     *                      description="описание",
-     *                      property="description",
-     *                      type="string",
-     *			            default="Описание продукта"
-     *                 ),    
-     *                 @OA\Property(
-     *                      description="изображение",
-     *                      property="image",
-     *                      type="file",
-     *                 ),
-     *                 @OA\Property(
-     *                      description="цена",
-     *                      property="price",
-     *                      type="number",
-     *			            default=100000
-     *                 ),
-     *                 @OA\Property(
-     *                      description="в наличии",
-     *                      property="available",
-     *                      type="boolean",
-     *                 )
-     * )))     
+     *     )      
      * )     
      * )     
      */
-    public function update($id, Request $request)
+    public function update(Request $request, $id)
     {
+
+        return $request->all();
+
         $product = Product::findOrFail($id);
 
         if (File::delete(public_path() . '/images/' . basename($product->image)))
